--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.12.0",
+    "mongoose": "^8.9.2",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.11.5",
     "uuid": "^11.0.3"
