--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "mongoose": "^8.9.2",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.11.5",
+    "sharp": "^0.33.5",
     "uuid": "^11.0.3"
   }
 }
