--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "type": "commonjs",
   "dependencies": {
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
@@ -11,6 +12,7 @@
     "mongoose": "^8.9.2",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.11.5",
+    "nodemon": "^3.1.9",
     "sharp": "^0.33.5",
     "uuid": "^11.0.3"
   }
